cpp/bank-account/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.009s
user	0m0.002s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Looking for C++ include pthread.h
-- Looking for C++ include pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Failed
-- Looking for pthread_create in pthreads
-- Looking for pthread_create in pthreads - not found
-- Looking for pthread_create in pthread
-- Looking for pthread_create in pthread - found
-- Found Threads: TRUE  
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
[ 25%] Building CXX object CMakeFiles/bank-account.dir/bank_account_test.cpp.o
[ 50%] Building CXX object CMakeFiles/bank-account.dir/bank_account.cpp.o
[ 75%] Building CXX object CMakeFiles/bank-account.dir/test/tests-main.cpp.o
[100%] Linking CXX executable bank-account
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
[100%] Built target bank-account
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
===============================================================================
All tests passed (17 assertions in 17 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
[100%] Built target test_bank-account
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex '^.*(tests-main|CompilerId).*[.](gcda|gcno)$' -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/bank-account.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/bank-account.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex '^.*[.](gcda|gcno)$'
./build/CMakeFiles/bank-account.dir/bank_account_test.cpp.gcno
./build/CMakeFiles/bank-account.dir/bank_account.cpp.gcno
./build/CMakeFiles/bank-account.dir/bank_account.cpp.gcda
./build/CMakeFiles/bank-account.dir/bank_account_test.cpp.gcda

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
bank_account.cpp                              33      33   100%   
bank_account_test.cpp                        109     109   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        174     169    97%
------------------------------------------------------------------------------
lines: 97.1% (169 out of 174)
branches: 40.2% (185 out of 460)

real	0m10.683s
user	0m9.527s
sys	0m1.155s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.278s
user	0m0.228s
sys	0m0.050s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:65,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.293s
user	0m0.194s
sys	0m0.099s

===============================================================================

Running: clang-format-16 -style=file -i ./bank_account.cpp ./bank_account_test.cpp ./bank_account.h

real	0m0.024s
user	0m0.010s
sys	0m0.014s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./bank_account.cpp ./bank_account_test.cpp ./bank_account.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/bank_account.h:6:10: fatal error: 'mutex' file not found
#include <mutex>
         ^~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/bank_account.h.

real	0m0.555s
user	0m0.515s
sys	0m0.040s


real	0m0.557s
user	0m0.515s
sys	0m0.042s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
13843 warnings generated.
49591 warnings generated.
49591 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/bank_account.h.
Suppressed 49596 warnings (49591 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.876s
user	0m6.804s
sys	0m0.071s
Running: clang-tidy-16 ./bank_account.cpp ./bank_account_test.cpp ./bank_account.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/bank-account/bank_account.h:6:10: error: 'mutex' file not found [clang-diagnostic-error]
#include <mutex>
         ^~~~~~~


real	0m6.878s
user	0m6.806s
sys	0m0.073s

===============================================================================

